--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_script:
 script:
  - find src/ -name '*.php' -print0 | xargs -0 -L 1 php -l
  - find tests/ -name '*.php' -print0 | xargs -0 -L 1 php -l
- - php vendon/bin/phpunit
+ - php vendor/bin/phpunit
 after_script:
  - php vendor/bin/coveralls -v
  - php vendor/bin/codacycoverage clover build/logs/clover.xml
